Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-12071

storage/xtradb/handler/ha_innodb.cc: Cannot assign const_iterator to iterator

    XMLWordPrintable

Details

    Description

      "/usr/local/src/mariadb-10.1-aix-github/mariadb-aix/storage/xtradb/handler/ha_innodb.cc", line 15117.73: 1540-2465 (S) An object or reference of type "std::set<dict_foreign_t *,dict_foreign_compare,std::allocator<dict_foreign_t *> >::iterator" cannot be initialized with a prvalue of type "std::_Tree<std::_Tset_traits<dict_foreign_t *,dict_foreign_compare,std::allocator<dict_foreign_t *>,0> >::const_iterator".
      storage/xtradb/CMakeFiles/xtradb.dir/build.make:1190: recipe for target 'storage/xtradb/CMakeFiles/xtradb.dir/handler/ha_innodb.cc.o' failed
      gmake[2]: *** [storage/xtradb/CMakeFiles/xtradb.dir/handler/ha_innodb.cc.o] Error 1
      CMakeFiles/Makefile2:2294: recipe for target 'storage/xtradb/CMakeFiles/xtradb.dir/all' failed
      gmake[1]: *** [storage/xtradb/CMakeFiles/xtradb.dir/all] Error 2
      Makefile:149: recipe for target 'all' failed
      gmake: *** [all] Error 2
      

      Attachments

        Activity

          People

            marko Marko Mäkelä
            johnnyrotten73 Chris
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.