MDEV-12071 storage/xtradb/handler/ha_innodb.cc: Cannot assign const_iterator to iterator